#1 minor enhancements